Add Report module (#73)
*New module report
*Update swagger
*Update doc
*Update launcher
